LVGL/build/log/idf_py_stderr_output_197649
/home/garfield/github/esp32-idf-device/LVGL/main/User_LVGL.c: In function 'create_ui':
/home/garfield/github/esp32-idf-device/LVGL/main/User_LVGL.c:73:40: error: 'lv_font_montserrat_16' undeclared (first use in this function); did you mean 'lv_font_montserrat_14'?
   73 |     lv_obj_set_style_text_font(title, &lv_font_montserrat_16, 0); // 设置标题字体
      |                                        ^~~~~~~~~~~~~~~~~~~~~
      |                                        lv_font_montserrat_14
/home/garfield/github/esp32-idf-device/LVGL/main/User_LVGL.c:73:40: note: each undeclared identifier is reported only once for each function it appears in
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:104: esp-idf/main/CMakeFiles/__idf_main.dir/User_LVGL.c.obj] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [CMakeFiles/Makefile2:5854: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
